Added dirty sample projects

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,5 @@ crashlytics-build.properties
 
 /hello-hibernate/target/
 /XML-HelloWorld/target/
+/Annotation-DirtyBit/target/
+/XML-DirtyBit/target/
